--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
 
         <footer>
             <div class="contact">
-                whatsapp: +57 300 000 0000
+                <p><img src="./img/whatsapp.svg" height="50px">+57 300 000 0000</p>
             </div>
             <div class="social">
+                <p><a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.svg" height="50px">  @LM_boutique</a></p>
             </div>
             <div class="designed">
-                <p>Designed with &#128147; by<a href="#">Cris-meca</a></p>
+                <p>Designed with &#128147; by <a href="https://cristhian-medina.github.io/portfolio-sample/" target="_blank">Cris-meca</a></p>
             </div>
         </footer>
     </body>
