--- a/index.html
+++ b/index.html
@@ -10,54 +10,42 @@
     </head>
     
     <body>
-        <nav>
+
+<!-- /* ------------------- nav bar ---------------- */ -->
+        <nav class="nav">
             <div class="logo-container">
-                <a href="#">
+                <a href="./index.html">
                     <img src="./img/dibujo.svg" alt="logo Lizzie Marie">
                 </a>
             </div>
             <menu class="menu-container">
                 <ul class="list">
-                    <li class="item-list"><a href="#">Mujer</a>
-                        <ul class="sublist">
-                            <li class="item-list"><a href="#">Blusas</a></li>
-                            <li class="item-list"><a href="#">Jeans</a></li>
-                            <li class="item-list"><a href="#">Faldas</a></li>
-                            <li class="item-list"><a href="#">Vestidos</a></li>
-                        </ul>
-                    </li>
+                    <li class="item-list"><a href="#">Mujer</a></li>
                     <li class="item-list"><a href="#">Hombre</a></li>
                     <li class="item-list"><a href="#">Niñas</a></li>
                     <li class="item-list"><a href="#">Niños</a></li>
                     <li class="item-list"><a href="#">Accesorios</a></li>
-                    <li class="item-list"><a href="#">Zapatos</a>
-                        <ul class="sublist">
-                            <li class="item-list"><a href="#">Hombre</a></li>
-                            <li class="item-list"><a href="#">Mujer</a></li>
-                            <li class="item-list"><a href="#">Niño</a></li>
-                            <li class="item-list"><a href="#">Niña</a></li>
-                        </ul>
-                    </li>
+                    <li class="item-list"><a href="#">Zapatos</a></li>
                 </ul>
             </menu>
             <div class="user-container list">
-                <a class="logo" href="#"><img src="./img/Search.svg" alt="Busqueda" height="50px"> </a>
-                <a class="logo" href="#"><img src="./img/Buy.svg" alt="Carrito de compras" height="50px"> </a>
-                <a class="logo" href="#"><img src="./img/User.svg" alt="Usuario" height="50px"> </a>
+                <a class="logo" href="#"><img src="./img/Search.svg" alt="Busqueda" height="50"> </a>
+                <a class="logo" href="#"><img src="./img/Buy.svg" alt="Carrito de compras" height="50"> </a>
+                <a class="logo" href="#"><img src="./img/User.svg" alt="Usuario" height="50"> </a>
             </div>
         </nav>
-
-        <header>
+<!-- /* ------------------- header ---------------- */ -->
+        <header class="header">
             <figure class="important-container">
                 <img src="https://images.pexels.com/photos/247204/pexels-photo-247204.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
                 <img src="https://images.pexels.com/photos/461646/pexels-photo-461646.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
                 <img src="https://images.pexels.com/photos/852860/pexels-photo-852860.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
-                <img src="https://images.pexels.com/photos/972995/pexels-photo-972995.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
+                <img src="https://<!-- /* ------------------- main ---------------- */ -->images.pexels.com/photos/972995/pexels-photo-972995.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
                 <img src="https://images.pexels.com/photos/1375849/pexels-photo-1375849.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
             </figure>
         </header>
-
-        <main>
+<!-- /* ------------------- main ---------------- */ -->
+        <main class="main">
             <div class="category-container">
                 <figure class="category-item woman">
                     <img src="https://images.pexels.com/photos/413841/pexels-photo-413841.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="ropa para mujer">
@@ -95,17 +83,24 @@
                 </figure>
             </div>
         </main>
-
-        <footer>
-            <div class="contact">
-                <p><img src="./img/whatsapp.svg" height="50px">+57 300 000 0000</p>
+<!-- /* ------------------- footer ---------------- */ -->
+        <footer class="footer">
+            <div class="top-footer">
+                <div class="contact">
+                    <p><a href="https://api.whatsapp.com/send?text=Te%20recomiendo%20esta%20tienda%20de%20ropa%20online,%20Me%20encanta%20la%20nueva%20colección%20y%20los%20precios.%20https://cristhian-medina.github.io/LM/" target="_blank"><img src="./img/whatsapp.svg" alt="logo whatsapp" height="50">+57 320 252 0057</a></p>
+                </div>
+                <div class="social">
+                    <p><a href="https://www.instagram.com/boutiquelizziemarie/" target="_blank"><img src="./img/instagram.svg" alt="logo instagram" height="50">  @LM_boutique</a></p>
+                </div>
+                <div class="faq">
+                    <p><a href="./faq.html">Preguntas Frecuentes</a></p>
+                </div>
             </div>
-            <div class="social">
-                <p><a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.svg" height="50px">  @LM_boutique</a></p>
-            </div>
-            <div class="designed">
-                <p>Designed with &#128147; by <a href="https://cristhian-medina.github.io/portfolio-sample/" target="_blank">Cris-meca</a></p>
-            </div>
+            <footer class="bottom-footer">
+                <div class="designed">
+                    <p>Designed with &#128147; by <a href="https://cristhian-medina.github.io/portfolio-sample/" target="_blank">Cris-meca</a></p>
+                </div>
+            </footer>
         </footer>
     </body>
 </html>
