Iniciando la version 2.0 - agregando el header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 <!-- /* ------------------- nav bar ---------------- */ -->
         <nav class="nav">
+            <div class="user-container list">
+                <a class="logo" href="#"><img src="./img/Search.svg" alt="Busqueda" height="50"> </a>
+                <a class="logo" href="#"><img src="./img/Buy.svg" alt="Carrito de compras" height="50"> </a>
+                <a class="logo" href="#"><img src="./img/User.svg" alt="Usuario" height="50"> </a>
+            </div>
             <div class="logo-container">
                 <a href="./index.html">
                     <img src="./img/dibujo.svg" alt="logo Lizzie Marie">
@@ -28,20 +33,15 @@
                     <li class="item-list"><a href="#">Zapatos</a></li>
                 </ul>
             </menu>
-            <div class="user-container list">
-                <a class="logo" href="#"><img src="./img/Search.svg" alt="Busqueda" height="50"> </a>
-                <a class="logo" href="#"><img src="./img/Buy.svg" alt="Carrito de compras" height="50"> </a>
-                <a class="logo" href="#"><img src="./img/User.svg" alt="Usuario" height="50"> </a>
-            </div>
         </nav>
 <!-- /* ------------------- header ---------------- */ -->
         <header class="header">
             <figure class="important-container">
-                <img src="https://images.pexels.com/photos/247204/pexels-photo-247204.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
-                <img src="https://images.pexels.com/photos/461646/pexels-photo-461646.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
-                <img src="https://images.pexels.com/photos/852860/pexels-photo-852860.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
-                <img src="https://<!-- /* ------------------- main ---------------- */ -->images.pexels.com/photos/972995/pexels-photo-972995.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
-                <img src="https://images.pexels.com/photos/1375849/pexels-photo-1375849.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="oferta">
+                <img src="./img/pexels-photo-1.jpeg" alt="oferta">
+                <img src="./img/pexels-photo-2.jpeg" alt="oferta">
+                <img src="./img/pexels-photo-3.jpeg" alt="oferta">
+                <img src="./img/pexels-photo-4.jpeg" alt="oferta">
+                <img src="./img/pexels-photo-5.jpeg" alt="oferta">
             </figure>
         </header>
 <!-- /* ------------------- main ---------------- */ -->
