Optimizando el codigo y SASS

--- a/index.html
+++ b/index.html
@@ -46,41 +46,43 @@
         </header>
 <!-- /* ------------------- main ---------------- */ -->
         <main class="main">
-            <div class="category-container">
-                <figure class="category-item woman">
-                    <img src="https://images.pexels.com/photos/413841/pexels-photo-413841.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="ropa para mujer">
-                    <p>Mujer</p>
-                </figure>
-            </div>
-            <div class="category-container">
-                <figure class="category-item man">
-                    <img src="https://images.pexels.com/photos/1306246/pexels-photo-1306246.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="ropa para hombre">
-                    <p>Hombre</p>
-                </figure>
-            </div>
-            <div class="category-container">
-                <figure class="category-item girl">
-                    <img src="https://images.pexels.com/photos/160933/girl-rabbit-friendship-love-160933.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="ropa para niña">
-                    <p>Niñas</p>
-                </figure>
-            </div>
-            <div class="category-container">
-                <figure class="category-item boy">
-                    <img src="https://images.pexels.com/photos/101537/baby-boy-hat-covered-101537.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="ropa para niño">
-                    <p>Niños</p>
-                </figure>
-            </div>
-            <div class="category-container">
-                <figure class="category-item accesory">
-                    <img src="https://images.pexels.com/photos/1460838/pexels-photo-1460838.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="accesorios">
-                    <p>Accesorios</p>
-                </figure>
-            </div>
-            <div class="category-container">
-                <figure class="category-item shoes">
-                    <img src="https://images.pexels.com/photos/292999/pexels-photo-292999.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="zapatos">
-                    <p>Zapatos</p>
-                </figure>
+            <div class="main__wrapper">
+                <div class="category-container">
+                    <figure class="category-item woman">
+                        <img src="./img/woman.jpeg" alt="ropa para mujer">
+                        <p>Mujer</p>
+                    </figure>
+                </div>
+                <div class="category-container">
+                    <figure class="category-item man">
+                        <img src="./img/man.jpeg" alt="ropa para hombre">
+                        <p>Hombre</p>
+                    </figure>
+                </div>
+                <div class="category-container">
+                    <figure class="category-item girl">
+                        <img src="./img/girl.jpeg" alt="ropa para niña">
+                        <p>Niñas</p>
+                    </figure>
+                </div>
+                <div class="category-container">
+                    <figure class="category-item boy">
+                        <img src="./img/boy.jpeg" alt="ropa para niño">
+                        <p>Niños</p>
+                    </figure>
+                </div>
+                <div class="category-container">
+                    <figure class="category-item accesory">
+                        <img src="./img/accesories.jpeg" alt="accesorios">
+                        <p>Accesorios</p>
+                    </figure>
+                </div>
+                <div class="category-container">
+                    <figure class="category-item shoes">
+                        <img src="./img/shoes.jpeg" alt="zapatos">
+                        <p>Zapatos</p>
+                    </figure>
+                </div>
             </div>
         </main>
 <!-- /* ------------------- footer ---------------- */ -->
